@@ -1,3 +1,6 @@
+- remove all fglrx options, hopefully default is good enough
+  (and at least MonitorLayout option is depreacated as reported on cooker)
+
 Version 0.17 - 9 May 2007, by Pascal "Pixel" Rigaux
 
 - fix using proprietary driver (remove debug code) (thanks to Michael Altizer)
